k8s/apps/automation/kmcp/app/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kagent
  namespace: automation
spec:
  hostnames:
    - kagent.jnobrega.com
  parentRefs:
    - name: internal
      namespace: network
      sectionName: websecure
  rules:
    - backendRefs:
        - name: kagent
          namespace: automation
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /
